--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,7 @@ base_ssh_port: 22       # you should change this to something else
 ##### KSH
 base_ksh: true                        # This adds the polyglot prompt to ksh.
                                       # plus a few other small functions and aliases.
-base_ksh_profiled_files_standard:     # These are the files that are always copied
+base_ksh_profiled_files:              # These are the files that are always copied
   - polyglot/polyglot.sh              # unless you redefine this variable to be []
   - profile.d/aliases.sh              # 
   - profile.d/functions.sh            # To add your own shell files to profile.d
